--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,15 +32,14 @@ linuxdeploy_plugins = []
 
 [tool.briefcase.app.RusArt.windows]
 requires = [
-    scikit-learn==1.2.1,
-    numpy==1.23.5,
-    tqdm==4.65.0,
-    pandas==1.5.3,
-    lightgbm==4.1.0,
-    tqdm,
-    torch,
-    torchvision,
-    opencv-python
+    'scikit-learn',
+    'numpy',
+    'tqdm',
+    'pandas',
+    'tqdm',
+    'torch',
+    'torchvision',
+    'opencv-python'
 ]
 
 # Mobile deployments
